# astrum

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
assets/bundle/: generate-dmg-background.py  icons.icns  unquarantine.command
crates/granular_btreemap/: Cargo.toml
crates/granular_btreemap/src/: lib.rs
src/: anyhttp_gpui.rs  assets.rs  http_client.rs  main.rs
src/blocks/: mod.rs  model_picker.rs  models_menu.rs  title_bar.rs
src/managers/: mod.rs  models_manager.rs  persistence_manager.rs  unique_id.rs  update_manager.rs
src/managers/chats_manager/: chat.rs  mod.rs
src/managers/settings_manager/: mod.rs
src/utils/: async_option.rs  bounds.rs  front_insert_map.rs  mod.rs  search.rs  secrets.rs  strings.rs
src/views/: backdrop.rs  mod.rs
src/views/chat/: mod.rs
src/views/chat/blocks/: mod.rs  sidebar.rs
src/views/chat/blocks/chat_area/: existing_chat.rs  mod.rs  models_menu.rs  prompt_new_chat.rs
src/views/model_discovery/: mod.rs
src/views/settings/: mod.rs
src/views/settings/blocks/: mod.rs  sidebar.rs
src/views/settings/blocks/settings_area/: mod.rs
src/views/settings/blocks/settings_area/pages/: chat_titles_page.rs  mod.rs  providers_page.rs
src/views/settings/blocks/settings_area/pages/providers_page/: mod.rs  provider_settings.rs
tools/dmg_bg/: __main__.py
