[package]
name = "astrum"
version = "0.1.3"
edition = "2024"

[dependencies]
gpui_tesserae = { git = "https://github.com/astrum-chat/gpui_tesserae" }
anyml = { git = "https://github.com/astrum-chat/anyml", features = ["ollama", "anthropic", "openai"] }
# Local development.
# gpui_tesserae = { path = "../gpui_tesserae" }
# anyml = { path = "../anyml", features = ["ollama", "anthropic", "openai"] }
granular_btreemap = { path = "crates/granular_btreemap" }

gpui = { version = "0.2.2", default-features = false }
gpui_squircle = { git = "https://github.com/astrum-chat/gpui_squircle" }
gpui_transitions = "0.1.5"
rust-embed = "8.9.0"
enum-assoc = "1.2.4"

anyhttp = { version = "0.0.0", features = [ "stream" ] }
http = "1.3.1"
async-trait = "0.1.89"
url = "2.5.7"
bytes = "1.11.0"
futures = "0.3.31"
anyhow = "1.0.100"
http-body = "1.0.1"

nanoid = "0.4.0"
indexmap = "2.12.1"
dirs = "6.0.0"

reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
smol = "2.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
thiserror = "2.0.17"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
chrono = "0.4.42"
phf = { version = "0.13.1", features = ["macros"] }
strsim = "0.11.1"
rayon = "1.10"

# Secrets manager.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
secrecy = "0.10.3"
dotenvy = "0.15.7"

# Logging.
tracing = "0.1"
tracing-subscriber = "0.3"

# Hashing.
sha2 = "0.10"

rand = "0.9.2"
smallvec = "1.15.1"

# Update checking.
semver = "1"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Fixes "two different versions of crate `core_graphics` are being used" error.
core-text = "=21.0.0"

[patch.crates-io]
gpui = { git = "https://github.com/zed-industries/zed" }

[workspace]
members = ["crates/granular_btreemap"]

[profile.dev.package."*"]
opt-level = 3

[package.metadata.bundle]
name = "Astrum"
identifier = "chat.astrum.astrum"
icon = ["assets/bundle/icons.icns"]
resources = []
version = "0.0.0"
short_description = ""
long_description = ""
osx_url_schemes = ["chat.astrum.astrum"]
